# gapsmith-db

./: .gitignore  Cargo.toml  LICENSING.md  PROVENANCE.md  README.md  ROADMAP.md  justfile  plan.md
.github/workflows/: ci.yml
crates/gapsmith-db-cli/: Cargo.toml
crates/gapsmith-db-cli/src/: curate_cmd.rs  fetch_cmd.rs  ingest_cmd.rs  main.rs  propose_catalogue_cmd.rs  propose_cmd.rs  release_cmd.rs  retrieval_factory.rs  universal_cmd.rs  verify_cmd.rs  verify_proposals_cmd.rs
crates/gapsmith-db-core/: Cargo.toml
crates/gapsmith-db-core/src/: compartment.rs  compound.rs  database.rs  ec.rs  evidence.rs  ids.rs  lib.rs  pathway.rs  pmid.rs  reaction.rs  reversibility.rs  serde_io.rs  source.rs
crates/gapsmith-db-core/tests/: property.rs
crates/gapsmith-db-ingest/: Cargo.toml
crates/gapsmith-db-ingest/src/: fetch.rs  hash.rs  http.rs  lib.rs  manifest.rs  merge.rs  source.rs
crates/gapsmith-db-ingest/src/parse/: chebi.rs  gapseq.rs  ir.rs  mnxref.rs  mod.rs  modelseed.rs  rhea.rs
crates/gapsmith-db-ingest/src/sources/: chebi.rs  gapseq.rs  intenz.rs  kegg.rs  mnxref.rs  mod.rs  modelseed.rs  reactome.rs  rhea.rs  uniprot.rs
crates/gapsmith-db-ingest/tests/: licence_lint.rs
crates/gapsmith-db-propose/: Cargo.toml
crates/gapsmith-db-propose/src/: decision.rs  domain_filter.rs  lib.rs  merge.rs  prompt.rs  proposer.rs  router.rs  schema.rs
crates/gapsmith-db-propose/src/llm/: fixture.rs  mod.rs  openrouter.rs
crates/gapsmith-db-propose/src/retrieval/: in_memory.rs  mod.rs  qdrant.rs
crates/gapsmith-db-verify/: Cargo.toml
crates/gapsmith-db-verify/src/: atom_balance.rs  atp_cycle.rs  charge_balance.rs  diagnostic.rs  dl_consistency.rs  ec_validity.rs  engine.rs  formula.rs  lib.rs  pathway_flux.rs  pmid_existence.rs  py_bridge.rs  thermo.rs  uniprot_existence.rs  universal_model.rs
data/: README.md
data/chebi/: SOURCE.toml
data/gapseq/: SOURCE.toml
data/intenz/: SOURCE.toml
data/kegg/: SOURCE.toml
data/mnxref/: SOURCE.toml
data/modelseed/: SOURCE.toml
data/reactome/: SOURCE.toml
data/rhea/: SOURCE.toml
data/uniprot/: SOURCE.toml
docs/adr/: 0001-rust-workspace-and-python-bridge.md  0002-no-metacyc-no-biocyc.md  0003-gpl-3-or-later.md  0004-licence-lint-scans-tracked-files.md  0005-universal-sbml-via-cobrapy.md  0006-retrieval-embedder-and-corpus.md  0007-catalogue-watchdog.md  0008-accept-to-db-merge.md  README.md
docs/runs/: 2026-04-18-gpt4o-catalogue.md
prompts/: pathway_proposal.md
proposals/catalogue/: README.md  microbial.tsv  reactome.tsv
proposals/fixtures/: ethanol_fermentation.json  glutamate_biosynthesis_gs_gogat.json  glycolysis_emp.json  methanogenesis_co2.json
python/: README.md  pyproject.toml
python/src/gapsmith_bridge/: __init__.py  corpus_ingest.py  verify.py
python/tests/: test_smoke.py
scripts/: fetch_uniprot_snapshot.py  install-hooks.sh  pre-commit  seed_corpus.sh
verify/baselines/: atp_cycle_ci_fixture.json
