[package]
name = "gapsmith-db-propose"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Model-agnostic LLM proposer client for gapsmith-db (default: OpenRouter)."

[lints]
workspace = true

[dependencies]
gapsmith-db-core = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
